--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
+@import url('../src/vendor/fonts/fonts.css');
 
+* {
+    box-sizing: border-box;
+    font-family: Inter, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+body {
+    margin: 0;
+}
