--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('../src/vendor/fonts/fonts.css');
+@import url('./vendor/fonts/fonts.css');
 
 * {
     box-sizing: border-box;
@@ -9,5 +9,6 @@
 }
 
 body {
-    margin: 0;
+    max-width: 1280px;
+    margin: 0 auto;
 }
