--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ body {
     max-width: 1280px;
     margin: 0 auto;
 }
+
+.section-title {
+    font-size: 22px;
+    line-height: initial;
+}
+
+.section-title::after {
+    content: '';
+    display: block;
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 1px;
+}
