--- a/src/components/LikeButton/LikeButton.css
+++ b/src/components/LikeButton/LikeButton.css
@@ -22,3 +22,14 @@
     border: none;
     background-image: url('../../images/like-loader.svg');
 }
+
+.like_type_remove {
+    display: none;
+    border: none;
+    box-shadow: none;
+    background-image: url('../../images/dislike-button.svg');
+}
+
+.card:hover .like_type_remove {
+    display: block;
+}
