--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -3,8 +3,8 @@
     grid-template-columns: repeat(auto-fit, 270px);
     justify-content: space-evenly;
     column-gap: 18px;
-    row-gap: 32px;
-    padding: 0;
+    row-gap: 57px;
+    padding: 0 70px;
     margin: 0 auto;
     list-style-type: none;
 }
@@ -30,6 +30,7 @@
     border-radius: 6px;
     margin-bottom: 30px;
     background-color: #ffffff;
+    font-weight: 500;
     cursor: pointer;
     transition: .1s linear;
     font-size: 12px;
@@ -37,4 +38,33 @@
 
 .movies__more-button:hover {
     opacity: .5;
+}
+
+@media screen and (max-width: 799px) {
+    .movies__grid {
+        grid-template-columns: repeat(auto-fit, 339px);
+        padding: 30px;
+    }
+
+    .movies__more {
+        padding: 0 30px;
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 399px) {
+    .movies__grid {
+        grid-template-columns: repeat(auto-fit, 300px);
+        gap: 52px;
+        padding: 0 10px;
+    }
+
+    .movies__more {
+        padding: 80px 10px;
+    }
+
+    .movies__more-button {
+        margin-bottom: 0;
+        width: 240px;
+    }
 }
