--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -52,3 +52,34 @@
     color: #000;
     text-decoration: none;
 }
+
+@media screen and (max-width: 799px) {
+    .portfolio {
+        padding: 0 50px 90px;
+    }
+
+    .portfolio__link {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 399px) {
+    .portfolio {
+        padding: 0 14px;
+    }
+
+    .portfolio__title {
+        margin-bottom: 40px;
+        font-size: 14px;
+    }
+
+    .portfolio__list-item {
+        background-size: 12px 12px;
+        background-position: bottom 30px right 0;
+    }
+
+    .portfolio__link {
+        font-size: 18px;
+        line-height: 28px;
+    }
+}
