--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,5 +1,5 @@
 .promo {
-    min-height: 634px;
+    min-height: 560px;
     background-color: #F3C1F8;
     background-image: url(../../images/promo-background.svg);
     background-size: auto;
@@ -8,9 +8,36 @@
 }
 
 .promo__title {
-    padding: 124px 0 0 70px;
+    max-width: 626px;
+    padding: 50px 0 0 70px;
     margin: 0;
     font-size: 40px;
     line-height: 52px;
-    user-select: none;
+}
+
+@media screen and (max-width: 799px) {
+    .promo {
+        min-height: 918px;
+        background-position: center bottom 70px;
+    }
+
+    .promo__title {
+        padding: 300px 0 0 0;
+        text-align: center;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 399px) {
+    .promo {
+        min-height: 630px;
+        background-position: center bottom 40px;
+    }
+
+    .promo__title {
+        padding: 183px 10px 0;
+        font-size: 31px;
+        line-height: 39px;
+        letter-spacing: -1px;
+    }
 }
