--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,20 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
+    outline-color: #F3C1F8;
 }
 
 body {
-    max-width: 1280px;
+    max-width: 1600px;
     margin: 0 auto;
     background-color: #fff;
+}
+
+.root__modal {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1;
 }
 
 .section-title {
@@ -25,4 +33,22 @@ body {
     border-bottom: 1px solid black;
     width: 100%;
     height: 1px;
+}
+
+.root__modal {
+    bottom: 5px;
+    right: 5px;
+}
+
+@media screen and (max-width: 464px) {
+    .root__modal {
+        bottom: 5px;
+        right: 5px;
+    }
+}
+
+@media screen and (max-width: 399px) {
+    .section-title {
+        font-size: 18px;
+    }
 }
