--- a/src/components/ProfileData/ProfileData.css
+++ b/src/components/ProfileData/ProfileData.css
@@ -1,7 +1,8 @@
 .profile-data {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-grow: 1;
     width: 410px;
     height: 214px;
 }
@@ -12,6 +13,10 @@
     font-weight: 500;
     line-height: initial;
     text-align: center;
+}
+
+.profile-data__input-wrapper {
+    position: relative;
 }
 
 .profile-data__input {
