--- a/src/components/UserForm/UserForm.css
+++ b/src/components/UserForm/UserForm.css
@@ -30,7 +30,17 @@
     color: #F9F9F9;
 }
 
-form__input {
+.form__label_profile {
+    position: absolute;
+    left: 0;
+    top: 5px;
+    margin-bottom: 0;
+    font-size: 11px;
+    font-weight: 500;
+    color: #000;
+}
+
+.form__input {
     margin-bottom: 24px;
 }
 
