--- a/src/components/UserForm/UserForm.css
+++ b/src/components/UserForm/UserForm.css
@@ -27,7 +27,7 @@
     margin: 0 0 5px 0;
     font-size: 10px;
     line-height: initial;
-    color: #F9F9F9;
+    color: #A0A0A0;
 }
 
 .form__label_profile {
